# zalgoctl

./: .gitignore  README.md  pyproject.toml  showcase  zalgo  zalgoctl
.github/workflows/: pages.yml
docs/: index.html
scripts/: ansi2html.py  release.sh
src/zalgoctl/: __init__.py  cli.py
