[project]
name = "zalgoctl"
version = "1.0.0"
description = "The best damn Zalgo text generator on the planet"
requires-python = ">=3.12"
dependencies = ["click>=8.0"]

[project.scripts]
zalgoctl = "zalgoctl.cli:cli"

[dependency-groups]
dev = [
    "ruff>=0.9",
    "ty>=0.0.1a7",
    "prek>=0.0.7",
]

[tool.ruff]
target-version = "py312"
line-length = 88

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "F",    # pyflakes
    "I",    # isort
    "UP",   # pyupgrade
    "B",    # flake8-bugbear
    "SIM",  # flake8-simplify
]
ignore = [
    "E501",  # line-too-long (handled by formatter)
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]  # unused imports OK in __init__

[tool.ty.environment]
python-version = "3.12"

[tool.ty.rules]
possibly-unresolved-reference = "warn"

[tool.ty.analysis]
allowed-unresolved-imports = [
    "click",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/zalgoctl"]
