[project]
name = "zalgoctl"
version = "0.1.1"
description = "The best damn Zalgo text generator on the planet"
readme = "README.md"
license = "MIT"
authors = [{ name = "Mike" }]
requires-python = ">=3.12"
dependencies = ["click>=8.0"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Text Processing",
    "Topic :: Utilities",
]

[project.urls]
Homepage = "https://github.com/mike/zalgoctl"
Repository = "https://github.com/mike/zalgoctl"
Issues = "https://github.com/mike/zalgoctl/issues"

[project.scripts]
zalgoctl = "zalgoctl.cli:cli"

[dependency-groups]
dev = [
    "ruff>=0.9",
    "ty>=0.0.1a7",
    "prek>=0.0.7",
    "twine>=6.0",
]

[tool.ruff]
target-version = "py312"
line-length = 88

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "F",    # pyflakes
    "I",    # isort
    "UP",   # pyupgrade
    "B",    # flake8-bugbear
    "SIM",  # flake8-simplify
]
ignore = [
    "E501",  # line-too-long (handled by formatter)
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]  # unused imports OK in __init__

[tool.ty.environment]
python-version = "3.12"

[tool.ty.rules]
possibly-unresolved-reference = "warn"

[tool.ty.analysis]
allowed-unresolved-imports = [
    "click",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/zalgoctl"]
